--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -1,11 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.ingredient.IngredientActivity">
+
+    <data>
+
+        <import type="java.util.List" />
+
+        <import type="com.kyawhut.codetest.order.ui.component.CustomTab.TabItem" />
+
+        <import type="com.kyawhut.codetest.share.utils.binding.RvBinding.LayoutType" />
+
+        <import type="com.kyawhut.codetest.order.adapter.IngredientAdapter" />
+
+        <variable
+            name="ingredientAdapter"
+            type="IngredientAdapter" />
+
+        <variable
+            name="tabList"
+            type="List&lt;TabItem&gt;" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <com.kyawhut.codetest.order.ui.component.CustomTab
+            android:id="@+id/tab_view"
+            tabList="@{tabList}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:paddingStart="@dimen/margin_medium"
+            android:paddingEnd="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_ingredient"
+            adapter="@{ingredientAdapter}"
+            itemCount="@{5}"
+            layoutManager="@{LayoutType.GRIDLAYOUT}"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clipToPadding="false"
+            android:padding="@dimen/margin_medium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tab_view" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
