--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -40,13 +40,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <View
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/view_search"
-                android:layout_width="150dp"
+                android:layout_width="170dp"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <EditText
+                    android:id="@+id/edt_search"
+                    android:layout_width="125dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_medium_2"
+                    android:background="@drawable/bg_search_order"
+                    android:drawableStart="@drawable/ic_search"
+                    android:drawablePadding="@dimen/margin_medium_2"
+                    android:hint="@string/hint_search_order"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:paddingVertical="@dimen/margin_medium"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/action_incoming"
