unit test add for master code merge. version code changed with git tag. hardcode usage replace with resource.

--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -73,7 +73,7 @@
                         android:background="#ff0000"
                         android:gravity="center"
                         android:paddingVertical="@dimen/margin_small"
-                        android:text="Available"
+                        android:text="@string/lbl_available"
                         android:textColor="@color/white"
                         android:textSize="@dimen/text_regular"
                         android:textStyle="bold"
