--- a/app/src/main/res/layout/view_order_header.xml
+++ b/app/src/main/res/layout/view_order_header.xml
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_small"
-                android:text="Auto reject"
+                android:text="@string/lbl_auto_reject"
                 android:textColor="?textColor"
                 android:textSize="@dimen/text_regular"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_timer_count"
