--- a/app/src/main/res/layout/view_order_header.xml
+++ b/app/src/main/res/layout/view_order_header.xml
@@ -93,6 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_small"
+                app:activeIndex="4"
                 app:dotCount="5"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
